--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Cabin:700" rel="stylesheet" type="text/css">
 
     <!-- Custom styles  -->
     <link href="css/grayscale.min.css" rel="stylesheet">
@@ -28,6 +28,7 @@
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">Flakpoint Development for VjoHanaba tool</h1>
               <p class="intro-text">Thanks to flakpoint development and machine learning your team can accomplish much greater results now by distributing task over all players according to their proficiencies. Just write down what you want to do and VjoHanaba will break it into part and assign to proper team members.</p>
+              <p><a href="https://gbksoft.com/blog/top-data-visualization-tools-for-finance-industry/">Buy now!</a></p>
             </div>
           </div>
         </div>
